--- a/src/sass/_colors-palette.scss
+++ b/src/sass/_colors-palette.scss
@@ -1,26 +1,44 @@
 // Default Blue
-$theme_color_default: #5e81ac;
+$theme_color_default: #74aabe;
 
 // Blue
-$theme_color_blue: #5e81ac;
+$theme_color_blue: #74aabe;
 
 // Purple
-$theme_color_purple: #b48ead;
+$theme_color_purple: #b84c75;
 
 // pink
-$theme_color_pink: #b48ead;
+$theme_color_pink: #b84c75;
 
 // red
-$theme_color_red: #bf616a;
+$theme_color_red: #c7525d;
 
 // orange
-$theme_color_orange: #d08770;
+$theme_color_orange: #d58161;
 
 // yellow
-$theme_color_yellow: #ebcb8b;
+$theme_color_yellow: #e3b064;
 
 // green
-$theme_color_green: #a3be8c;
+$theme_color_green: #81b866;
 
 // grey
-$theme_color_grey: #81a1c1;
+$theme_color_grey: #7a8185;
+
+// foreground
+$theme_color_fg: #f8f7f1;
+
+// background
+$theme_color_bg: #1c2124;
+
+// xcolor0
+$theme_xcolor_0: #2d3539;
+
+// xcolor8
+$theme_xcolor_8: #3f4a50;
+
+// dim foreground - xcolor15
+$theme_xcolor_15: #caced3;
+
+// grey
+$theme_color_grey: #7a8185;
