--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -6,57 +6,57 @@
 @import 'colors-palette';
 
 // Base colors
-$base_color:                        if($variant == 'light', #d8dee9, #2e3440);
-$text_color:                        if($variant == 'light', #3b4252, #d8dee9);
-$bg_color:                          if($variant == 'light', #e5e9f0, #3b4252);
-$fg_color:                          if($variant == 'light', #2e3440, #dedede);
-$alt_fg_color:                      if($variant == 'light', #3b4252, #afafaf);
-$hint_fg_color:                     if($variant == 'light', #434c5e, #999999);
+$base_color:                        if($variant == 'light', $theme_xcolor_15, $theme_color_bg);
+$text_color:                        if($variant == 'light', $theme_xcolor_0, $theme_xcolor_15);
+$bg_color:                          if($variant == 'light', $theme_color_fg, $theme_xcolor_0);
+$fg_color:                          if($variant == 'light', $theme_color_bg, #dedede);
+$alt_fg_color:                      if($variant == 'light', $theme_xcolor_0, #afafaf);
+$hint_fg_color:                     if($variant == 'light', $theme_xcolor_8, #999999);
 
-$track_color:                       if($variant == 'light', rgba(#2e3440, 0.20), rgba(#d8dee9, 0.16));
-$visit_color:                       if($variant == 'light', rgba(#2e3440, 0.16), rgba(#d8dee9, 0.12));
-$divider_color:                     if($variant == 'light', rgba(#2e3440, 0.12), rgba(#d8dee9, 0.1));
+$track_color:                       if($variant == 'light', rgba($theme_color_bg, 0.20), rgba($theme_xcolor_15, 0.16));
+$visit_color:                       if($variant == 'light', rgba($theme_color_bg, 0.16), rgba($theme_xcolor_15, 0.12));
+$divider_color:                     if($variant == 'light', rgba($theme_color_bg, 0.12), rgba($theme_xcolor_15, 0.1));
 
-$light_fg_color:                    #d8dee9;
-$light_alt_fg_color:                rgba(#d8dee9, 0.85);
-$light_hint_fg_color:               rgba(#d8dee9, 0.50);
-$light_disabled_fg_color:           rgba(#d8dee9, 0.45);
-$light_alt_disabled_fg_color:       rgba(#d8dee9, 0.35);
-$light_track_color:                 rgba(#d8dee9, 0.28);
-$light_divider_color:               rgba(#d8dee9, 0.15);
+$light_fg_color:                    $theme_xcolor_15;
+$light_alt_fg_color:                rgba($theme_xcolor_15, 0.85);
+$light_hint_fg_color:               rgba($theme_xcolor_15, 0.50);
+$light_disabled_fg_color:           rgba($theme_xcolor_15, 0.45);
+$light_alt_disabled_fg_color:       rgba($theme_xcolor_15, 0.35);
+$light_track_color:                 rgba($theme_xcolor_15, 0.28);
+$light_divider_color:               rgba($theme_xcolor_15, 0.15);
 
 $selected_fg_color:                 $light_fg_color;
 $selected_bg_color:                 $theme_color_default;
 $primary_color:                     $selected_bg_color;
 
 $selected_borders_color:            darken($selected_bg_color, 10%);
-$borders_color:                     if($variant == 'light', rgba(46, 52, 64, 0.12), rgba(216, 222, 233, 0.12));
-$light_borders_color:               if($variant == 'light', rgba(46, 52, 64, 0.08), rgba(216, 222, 233, 0.10));
-$dark_borders_color:                if($variant == 'light', rgba(46, 52, 64, 0.08), rgba(46, 52, 64, 0.15));
+$borders_color:                     if($variant == 'light', rgba(54, 54, 54, 0.12), rgba(224, 224, 224, 0.12));
+$light_borders_color:               if($variant == 'light', rgba(54, 54, 54, 0.08), rgba(224, 224, 224, 0.10));
+$dark_borders_color:                if($variant == 'light', rgba(54, 54, 54, 0.08), rgba(54, 54, 54, 0.15));
 $solid_borders_color:               if($variant == 'light', darken($bg_color, 12%), lighten($bg_color, 8%));
 $dark_solid_borders_color:          if($variant == 'light', darken($bg_color, 12%), darken($bg_color, 5%));
-$highlight_color:                   if($variant == 'light', rgba(216, 222, 233, 0.65), rgba(216, 222, 233, 0.1));
+$highlight_color:                   if($variant == 'light', rgba(224, 224, 224, 0.65), rgba(224, 224, 224, 0.1));
 
 // Background colors
-$dark_bg_color:                     rgba(#2e3440, 0.6);
-$alt_dark_bg_color:                 rgba(#2e3440, 0.3);
+$dark_bg_color:                     rgba($theme_color_bg, 0.6);
+$alt_dark_bg_color:                 rgba($theme_color_bg, 0.3);
 $solid_bg_color:                    if($variant == 'light', #eeeeee, #555555); // for gnome-shell keyboard
-$alt_solid_bg_color:                if($variant == 'light', #c0c0c0, #2e3440); // for gnome-shell keyboard
+$alt_solid_bg_color:                if($variant == 'light', #c0c0c0, $theme_color_bg); // for gnome-shell keyboard
 
 // Link colors
-$link_color:                        #5E81AC;
+$link_color:                        $theme_color_blue;
 $link_visited_color:                if($variant == 'light', lighten($text_color, 10%), darken($text_color, 15%));
 
 // Theme colors
 $selection_mode_bg:                 lighten($selected_bg_color, 15%);
-$warning_color:                     #d08770;
-$error_color:                       #bf616a;
-$success_color:                     #a3be8c;
-$destructive_color:                 #bf616a;
-$suggested_color:                   #5e81ac;
+$warning_color:                     $theme_color_orange;
+$error_color:                       $theme_color_red;
+$success_color:                     $theme_color_green;
+$destructive_color:                 $theme_color_red;
+$suggested_color:                   $theme_color_blue;
 
 $progress_color:                    $selected_bg_color;
-$drop_target_color:                 #D08770;
+$drop_target_color:                 $theme_color_orange;
 
 //insensitive state derived colors
 $disabled_fg_color:                 if($variant == 'light', transparentize($fg_color, 0.55), transparentize($fg_color, 0.65));
@@ -64,40 +64,40 @@ $alt_disabled_fg_color:             if($variant == 'light', transparentize($alt_
 $disabled_bg_color:                 if($variant == 'light', mix($bg_color, $base_color, 40%), lighten($bg_color, 2%));
 
 // Headerbar colors
-$header_bg:                         if($variant == 'light', #ECEFF4, #2E3440);
-$header_highlight:                  if($variant == 'dark', #434C5E, #ECEFF4);
+$header_bg:                         if($variant == 'light', $theme_color_fg, $theme_color_bg);
+$header_highlight:                  if($variant == 'dark', $theme_xcolor_8, $theme_color_fg);
 
 $header_bg_backdrop:                if($variant == 'light', darken($header_bg, 0%), darken($header_bg, 0%));
-$header_border:                     if($variant == 'light', mix(#2E3440, $header_bg, 12%), mix(#2E3440, $header_bg, 75%));
+$header_border:                     if($variant == 'light', mix($theme_color_bg, $header_bg, 12%), mix($theme_color_bg, $header_bg, 75%));
 
-$header_fg:                         if($variant == 'light', #4C566A, #ECEFF4);
+$header_fg:                         if($variant == 'light', $theme_xcolor_8, $theme_color_fg);
 
 // Sidebar colors
-$dark_sidebar_bg: #4C566A;
+$dark_sidebar_bg: $theme_xcolor_8;
 
 @if $trans=='true' and $variant=='light' {
-  $dark_sidebar_bg:                 transparentize(#ECEFF4, 0.06);
+  $dark_sidebar_bg:                 transparentize($theme_color_fg, 0.06);
 }
 
 @if $trans=='false' and $variant=='light' {
-  $dark_sidebar_bg:                 #ECEFF4;
+  $dark_sidebar_bg:                 $theme_color_fg;
 }
 
 @if $trans=='true' and $variant=='dark' {
-  $dark_sidebar_bg:                 transparentize(#4C566A, 0.05);
+  $dark_sidebar_bg:                 transparentize($theme_xcolor_8, 0.05);
 }
 
 @if $trans=='false' and $variant=='dark' {
-  $dark_sidebar_bg:                 #4C566A;
+  $dark_sidebar_bg:                 $theme_xcolor_8;
 }
 
 $dark_sidebar_fg:                   $text_color;
 $dark_sidebar_border:               if($variant == 'light', darken(opacify($dark_sidebar_bg, 1), 5%), lighten(opacify($dark_sidebar_bg, 1), 5%));
-$sidebar_theme_color:               if($variant == 'light', rgba(46, 52, 64, 0.12), rgba(216, 222, 233, 0.12));
+$sidebar_theme_color:               if($variant == 'light', rgba(54, 54, 54, 0.12), rgba(224, 224, 224, 0.12));
 
 //OSD colors
-$osd_fg_color:                      #e5e9f0;
-$osd_bg_color:                      if($trans=='true', rgba(#2E3440, 0.9), #2E3440);
+$osd_fg_color:                      $theme_color_fg;
+$osd_bg_color:                      if($trans=='true', rgba($theme_color_bg, 0.9), $theme_color_bg);
 $osd_button_bg:                     rgba(lighten($osd_bg_color, 22%), 0.96);
 $osd_button_border:                 $dark_borders_color;
 $osd_entry_bg:                      rgba(lighten($osd_bg_color, 22%), 0.96);
@@ -108,7 +108,7 @@ $osd_borders_color:                 $dark_borders_color;
 
 // Menu colors
 $menu_bg:                           if($variant == 'light', $base_color, $bg_color);
-$menu_bd:                           if($variant == 'light', rgba(46, 52, 64, 0.05), rgba(216, 222, 233, 0.08));
+$menu_bd:                           if($variant == 'light', rgba(54, 54, 54, 0.05), rgba(224, 224, 224, 0.08));
 
 @if $trans == 'true' { $menu_bg:    if($variant == 'light', rgba($base_color, 0.95), rgba($bg_color, 0.95)); }
 
@@ -118,72 +118,72 @@ $dialog_bg_color:                   if($variant == 'light', $bg_color, $base_col
 
 // Panel colors
 $panel_bg:                          if($variant == 'light', #f1f1f1, #2a2a2a);
-$panel_fg:                          if($trans == 'true', #d8dee9, $text_color);
+$panel_fg:                          if($trans == 'true', $theme_xcolor_15, $text_color);
 
 @if $black == 'true' { $panel_fg:   $text_color; }
 
-$panel_top_color:                   if($variant == 'dark', #4C566A, #ECEFF4);
-$panel_bottom_color:                if($variant == 'dark', #2E3440, #e2e2e2);
-$panel_border_color:                if($variant == 'light', rgba(216, 222, 233, 0.22), rgba(46, 52, 64, 0.22));
+$panel_top_color:                   if($variant == 'dark', $theme_xcolor_8, $theme_color_fg);
+$panel_bottom_color:                if($variant == 'dark', $theme_color_bg, #e2e2e2);
+$panel_border_color:                if($variant == 'light', rgba(224, 224, 224, 0.22), rgba(54, 54, 54, 0.22));
 
 // Entry colors
-$entry_bg:                          if($variant == 'light', rgba(46, 52, 64, 0.05), rgba(216, 222, 233, 0.05));
-$entry_shell_bg:                    if($variant == 'light', rgba(46, 52, 64, 0.1), rgba(216, 222, 233, 0.1));
+$entry_bg:                          if($variant == 'light', rgba(54, 54, 54, 0.05), rgba(224, 224, 224, 0.05));
+$entry_shell_bg:                    if($variant == 'light', rgba(54, 54, 54, 0.1), rgba(224, 224, 224, 0.1));
 $entry_border:                      $borders_color;
 $entry_highlight:                   rgba($selection_mode_bg, 0.75);
 
 // Button colors
-$button_bg:                         if($variant == 'light', #D8DEE9, #4C566A);
-$button_active_top:                 if($variant == 'light', $selected_bg_color, #5E81AC);
-$button_active_bottom:              if($variant == 'light', $selected_bg_color, #5E81AC);
-$button_active_hover_top:           if($variant == 'light', $selected_bg_color, #5E81AC);
-$button_active_hover_bottom:        if($variant == 'light', $selected_bg_color, #5E81AC);
+$button_bg:                         if($variant == 'light', $theme_xcolor_15, $theme_xcolor_8);
+$button_active_top:                 if($variant == 'light', $selected_bg_color, $theme_color_blue);
+$button_active_bottom:              if($variant == 'light', $selected_bg_color, $theme_color_blue);
+$button_active_hover_top:           if($variant == 'light', $selected_bg_color, $theme_color_blue);
+$button_active_hover_bottom:        if($variant == 'light', $selected_bg_color, $theme_color_blue);
 
 $button_border:                     $borders_color;
-$button_active_border:              #5E81AC;
+$button_active_border:              $theme_color_blue;
 
-$header_button_bg:                  if($variant == 'dark', lighten($header_bg, 15%), #D8DEE9);
-$header_button_hover_bg:            if($variant == 'dark', lighten($header_bg, 25%), #E5E9F0);
-$header_button_active_bg:           if($variant == 'dark', lighten($header_bg, 35%), #81a1c1);
-$header_button_checked_bg:          if($variant == 'dark', lighten($header_bg, 45%), #81a1c1);
+$header_button_bg:                  if($variant == 'dark', lighten($header_bg, 15%), $theme_xcolor_15);
+$header_button_hover_bg:            if($variant == 'dark', lighten($header_bg, 25%), $theme_color_fg);
+$header_button_active_bg:           if($variant == 'dark', lighten($header_bg, 35%), $theme_color_blue);
+$header_button_checked_bg:          if($variant == 'dark', lighten($header_bg, 45%), $theme_color_blue);
 
 // Button borders and highlights colors
-$button_highlight:                  if($variant == 'light', #D8DEE9, rgba(216, 222, 233, 0.1));
+$button_highlight:                  if($variant == 'light', $theme_xcolor_15, rgba(224, 224, 224, 0.1));
 
 $button_borders:                    if($variant == 'light', $button_border, $dark_borders_color);
 $button_borders_hover:              if($variant == 'light', $button_border, $dark_borders_color);
 $button_borders_active:             if($variant == 'light', $button_active_border, $dark_borders_color);
 
-$header_button_highlight:           if($variant == 'light', #D8DEE9, #4C566A);
-$header_button_hover_highlight:     if($variant == 'light', #D8DEE9, #4C566A);
-$header_button_checked_highlight:   if($variant == 'light', $borders_color, #D8DEE9);
+$header_button_highlight:           if($variant == 'light', $theme_xcolor_15, $theme_xcolor_8);
+$header_button_hover_highlight:     if($variant == 'light', $theme_xcolor_15, $theme_xcolor_8);
+$header_button_checked_highlight:   if($variant == 'light', $borders_color, $theme_xcolor_15);
 
 // Images
 $button_active_image:               linear-gradient(0deg, $button_active_bottom 0%, $button_active_top 100%);
 $button_active_hover_image:         linear-gradient(0deg, $button_active_hover_bottom 0%, $button_active_hover_top 100%);
 
 // WM colors
-$wm_outline_light: 0 0 0 2px rgba(#2e3440, 0.03), 0 0 0 1px rgba(#2e3440, 0.12);
-$wm_outline_dark: 0 0 0 2px rgba(#2e3440, 0.1), 0 0 0 1px rgba(#2e3440, 0.75);
-$wm_shadow: if($variant=='light', rgba(#2e3440, 0.15), rgba(#2e3440, 0.35));
+$wm_outline_light: 0 0 0 2px rgba($theme_color_bg, 0.03), 0 0 0 1px rgba($theme_color_bg, 0.12);
+$wm_outline_dark: 0 0 0 2px rgba($theme_color_bg, 0.1), 0 0 0 1px rgba($theme_color_bg, 0.75);
+$wm_shadow: if($variant=='light', rgba($theme_color_bg, 0.15), rgba($theme_color_bg, 0.35));
 $wm_outline: if($variant=='light', $wm_outline_light, $wm_outline_dark);
 
 // WM Buttons
 
 // Close
-$wm_button_close_bg:                if($variant == 'light', #BF616A, #BF616A);
-$wm_button_close_hover_bg:          if($variant == 'light', #D08770, #D08770);
-$wm_button_close_active_bg:         if($variant == 'light', #BF616A, #BF616A);
+$wm_button_close_bg:                if($variant == 'light', $theme_color_red, $theme_color_red);
+$wm_button_close_hover_bg:          if($variant == 'light', $theme_color_orange, $theme_color_orange);
+$wm_button_close_active_bg:         if($variant == 'light', $theme_color_red, $theme_color_red);
 
-$wm_icon_close_bg:                  if($variant == 'light',#ECEFF4 , #2E3440);
+$wm_icon_close_bg:                  if($variant == 'light',$theme_color_fg , $theme_color_bg);
 
 // Minimize, Maximize
-$wm_button_hover_bg:                if($variant == 'light', #ECEFF4, #454C5C);
+$wm_button_hover_bg:                if($variant == 'light', $theme_color_fg, $theme_xcolor_8);
 $wm_button_active_bg:               $selected_bg_color;
 
-$wm_button_hover_border:            if($variant == 'light', #D1D3DA, #262932);
+$wm_button_hover_border:            if($variant == 'light', $theme_xcolor_15, $theme_xcolor_0);
 
-$wm_icon_bg:                        if($variant == 'light', #90949E, #90939B);
-$wm_icon_unfocused_bg:              if($variant == 'light', #B6B8C0, #666A74);
-$wm_icon_hover_bg:                  if($variant == 'light', #7A7F8B, #C4C7CC);
-$wm_icon_active_bg:                 #D8DEE9;
+$wm_icon_bg:                        if($variant == 'light', $theme_xcolor_15, $theme_color_grey);
+$wm_icon_unfocused_bg:              if($variant == 'light', $theme_color_grey, $theme_color_grey);
+$wm_icon_hover_bg:                  if($variant == 'light', $theme_color_grey, $theme_xcolor_15);
+$wm_icon_active_bg:                 $theme_xcolor_15;
