Change to gruvbox

--- a/src/sass/_colors-palette.scss
+++ b/src/sass/_colors-palette.scss
@@ -1,44 +1,44 @@
 // Default Blue
-$theme_color_default: #74aabe;
+$theme_color_default: #7daea3;
 
 // Blue
-$theme_color_blue: #74aabe;
+$theme_color_blue: #7daea3;
 
 // Purple
-$theme_color_purple: #b84c75;
+$theme_color_purple: #d3869b;
 
 // pink
-$theme_color_pink: #b84c75;
+$theme_color_pink: #d3869b;
 
 // red
-$theme_color_red: #c7525d;
+$theme_color_red: #ea6962;
 
 // orange
-$theme_color_orange: #d58161;
+$theme_color_orange: #e78d63;
 
 // yellow
 $theme_color_yellow: #e3b064;
 
 // green
-$theme_color_green: #81b866;
+$theme_color_green: #a9b655;
 
 // grey
-$theme_color_grey: #7a8185;
+$theme_color_grey: #928374;
 
 // foreground
-$theme_color_fg: #f8f7f1;
+$theme_color_fg: #f9f5d7;
 
 // background
-$theme_color_bg: #1c2124;
+$theme_color_bg: #1d2021;
 
 // xcolor0
-$theme_xcolor_0: #2d3539;
+$theme_xcolor_0: #3c3836;
 
 // xcolor8
-$theme_xcolor_8: #3f4a50;
+$theme_xcolor_8: #504945;
 
 // dim foreground - xcolor15
-$theme_xcolor_15: #caced3;
+$theme_xcolor_15: #fbf1c7;
 
 // grey
-$theme_color_grey: #7a8185;
+$theme_color_grey: #928374;
