--- a/src/other/dash-to-dock/stylesheet.css
+++ b/src/other/dash-to-dock/stylesheet.css
@@ -13,14 +13,14 @@
 }
 
 #dashtodockContainer .number-overlay {
-  color: #caced3;
+  color: #fbf1c7;
   background-color: rgba(0, 0, 0, 0.75);
   text-align: center;
 }
 
 #dashtodockContainer .notification-badge {
-  color: #caced3;
-  background-color: #74aabe;
+  color: #fbf1c7;
+  background-color: #7daea3;
   box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.25);
   border-radius: 1000px;
   margin: 2px;
@@ -137,7 +137,7 @@
 }
 
 #dashtodockContainer:overview #dash {
-  background: rgba(202, 206, 211, 0.15);
+  background: rgba(251, 241, 199, 0.15);
 }
 
 #dashtodockContainer.opaque:overview #dash, #dashtodockContainer.transparent:overview #dash {
